--- a/CURSO/DIW/JQUERY/Ejercicios/Ejercicio2/index.html
+++ b/CURSO/DIW/JQUERY/Ejercicios/Ejercicio2/index.html
@@ -119,23 +119,17 @@
             </div>
 
             <div id="secundario">
-                <h2>Phasellus blandit</h2>
+                <h2>Contenido 1</h2>
                 <div>
                     <p>Praesent sodales imperdiet augue. Mauris lorem felis, semper eu, tincidunt eu, sollicitudin eget,
-                        sem. Nulla facilisi. Morbi ut enim ut enim ultricies dapib facilisi. Morbi ut enim ut enim ultricies  facilisi. 
-                        Morbi ut enim ut enim ultricies  facilisi. Morbi ut enim ut enim 
-                        ultricies  facilisi. Morbi ut enim ut enim ultricies 
+                        sem. Nulla facilisi. Morbi ut enim ut enim ultricies dapib facilisi. 
                     </p>
                 </div>
 
-                <h2>Nullam vel turpis</h2>
+                <h2>Contenido 2</h2>
                 <div>
                     <p>Donec commodo, turpis vel venenatis sollicitudin, quam ante convallis justo, sed eleifend justo
-                        lectus quis sapien. Ut consequat libero eget est.Donec commodo, turpis vel venenatis
-                        sollicitudin, quam ante convallis justo, sed eleifend justo
-                        lectus quis sapien.  Ut consequat libero eget est.Donec commodo, turpis vel venenatis
-                        sollicitudin, quam ante convallis justo, sed eleifend justo
-                        lectus quis sapien.
+                        lectus quis sapien. Ut consequat libero eget est.
                 </div>
             </div>
 
